# homelab

./: .ansible-lint  .gitignore  .mise.local.toml.example  .mise.toml  .pre-commit-config.yaml  .releaserc.json  .shellspec  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  helmfile.yaml  helmfile.yaml.gotmpl  package-lock.json  package.json  pyproject.toml  renovate.json  versions.yaml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  lint.yml  release.yml  test.yml  validate.yml
.kilo/plans/: 1775524753492-happy-tiger.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
charts/argo-events-config/: Chart.yaml  values.yaml
charts/argo-rollouts-config/: Chart.yaml  values.yaml
charts/argo-workflows-config/: Chart.yaml  values.yaml
charts/authentik-blueprints/: Chart.yaml  values.yaml  values.yaml.gotmpl
charts/cert-manager-config/: Chart.yaml  values.yaml
charts/external-ingress/: Chart.yaml  values.yaml
charts/metallb-config/: Chart.yaml  values.yaml
charts/tekton-config/: Chart.yaml  values.yaml
charts/tekton-operator/: Chart.yaml  README.md
docs/: ADDITIONAL.md  CONFIG.md  FORKING.md  IMPORTANT.md  INSTALL.md  INVESTIGATE.md  SCRIPTS.md  SECRETS.md  TESTING.md  VERSIONING.md  openbao-sso.md
docs/decisions/: ADR-TEMPLATE.md  INDEX.md  blueprints-secret-handling.md
helm/environments/: prod.secrets.enc.yaml  prod.yaml
helm/values/: prometheus-values.yaml.gotmpl
helmfile/: 001-crds.helmfile.yaml  002-certs.helmfile.yaml.gotmpl  003-ingresses.helmfile.yaml.gotmpl  config.template.yaml  crds.helmfile.yaml  environments.yaml  environments.yaml.gotmpl  repositories.yaml  templates.yaml  templates.yaml.gotmpl
helmfile/common/: common.yaml.gotmpl
helmfile/environments/: lint-values.yaml
helmfile/releases/: 001-crds.helmfile.yaml.gotmpl  002-certs.helmfile.yaml.gotmpl  003-blueprints.helmfile.yaml.gotmpl  004-core-apps.helmfile.yaml.gotmpl  005-ingresses.helmfile.yaml.gotmpl  006-tekton.helmfile.yaml.gotmpl
helmfile/secret-templates/: authentik.template.yaml  cert-manager-config.template.yaml  grafana.template.yaml  openbao.template.yaml  prometheus-stack.template.yaml  shared-sso.template.yaml  velero.template.yaml
kseed/: .coverage  .gitignore  CHANGELOG.md  Pulumi.yaml  README.md  pyproject.toml
kseed/docs/: RECOMMENDATIONS.md
kseed/kseed/: __init__.py  __main__.py  cli.py  config.py  infra.py
kseed/kseed/cli/: __init__.py  commands.py
kseed/kseed/config/: __init__.py  manager.py
kseed/kseed/diagnose/: __init__.py  checker.py
kseed/kseed/infra/: __init__.py  automation.py  resources.py
kseed/kseed/infra/components/: __init__.py  base.py  registry.py
kseed/kseed/infra/components/loadbalancer/: __init__.py  metallb.py
kseed/tests/: conftest.py  test_cli.py  test_components.py  test_config.py  test_diagnose.py  test_resources.py
metal/k3s/: README.md  ansible.cfg  inventory.example.yml  inventory.sops.yml  requirements.yml  run.sh
plans/: homelab-review-recommendations.md
scripts/: check-kubernetes.sh  check-requirements.sh  check-secrets.sh  check.sh  decrypt-dev-secrets.sh  decrypt-prod-secrets.sh  destroy-helmfiles.sh  destroy.sh  init-secrets.sh  install-helm-plugins.sh  install-helmfiles.sh  install.sh  setup-openbao.sh  sops-decrypt-secrets.sh  sops-encrypt-secrets.sh  terraform.sh  update-locks.sh  velero-secrets.sh
scripts/apps/: setup-openbao-preflight.sh  setup-openbao.sh  unseal-openbao.sh
scripts/helm/: destroy-one.sh  destroy.sh  install-one.sh  install-plugins.sh  install.sh  update-locks.sh
scripts/infra/: check.sh  doctor.sh  preflight.sh  terraform.sh
scripts/lib/: colors.sh  env.sh  header.sh  helmfile.sh  (+5 more)
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
(+143 files in other folders)
