[tool.poetry]
name = "homelab"
version = "0.0.0"
description = "Python tooling for homelab automation"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "2.18.6"
ansible-lint = "26.4.0"
pre-commit = "3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-html = "^4.0"
pytest-check = "^2.3"
pytest-bdd = "^7.3"
requests = "^2.32"
kubernetes = "^32.0"
pyyaml = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=reports/test-report.html --self-contained-html -v"
bdd_features_base_dir = "tests/features"
markers = [
    "offline: BDD/acceptance scenarios that need no cluster (run in CI and pre-commit)",
    "online: scenarios that require a live homelab-<env> cluster context",
]
filterwarnings = [
    # pytest-bdd 7.3 decorates scenario wrappers with an empty usefixtures() when a
    # scenario binds no indirect fixtures; harmless no-op. Drop if we move to pytest-bdd 8.x.
    "ignore:.*without arguments has no effect:pytest.PytestWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
