[tool.poetry]
name = "kseed"
version = "0.1.0"
description = "Pulumi infrastructure as code for homelab k3s cluster"
authors = ["Homelab Owner <admin@homelab.local>"]
readme = "README.md"
packages = [{include = "kseed"}]

[tool.poetry.dependencies]
python = "^3.14"
python-semantic-release = "^10.5.3"
pulumi = "^3.226.0"
pulumi-kubernetes = "^4.28.0"
python-dotenv = "^1.2.2"
typer = {extras = ["all"], version = "^0.13.1"}
rich = "^14.3.3"
textual = ">=8.1.1"
pyyaml = "^6.0.3"
pydantic = "^2.12.0"
kubernetes = "^35.0.0"

[tool.poetry.scripts]
kseed = "kseed.cli.commands:app"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.semantic_release]
version_variable = [
    "kseed/__init__.py:__version__",
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
build_command = "poetry build"
upload = false
changelog_file = "CHANGELOG.md"
hvcs = "github"
tag_commit = true
